# WireboundWorldCreator

./: .clang-format  CMakeLists.txt  README.md  ideas.txt
assets/: AllTiles.txt  Paths.txt
assets/poisson/: README.md
assets/sky/: README.md
assets/terrain/: README.md
shaders/: Dithering.comp  DrawHeightMap.comp  DynamicSprite.frag  DynamicSprite.vert  Fft.comp  FloodFill.comp  GenHeightMap.comp  Grass.comp  Grass.frag  Grass.tesc  Grass.tese  Grass.vert  HeightMapPicking.vert  MenuIconShader.frag  Placement.frag  Placement.vert  PointsPolygon.frag  PointsPolygon.vert  PoissonPoints.comp  Skybox.frag  Skybox.vert  SliderHandle.frag  SliderHandle.vert  Sprite.frag  Sprite.vert  SpriteHeightMap.frag  SpriteHeightMap.vert  SpritePick.frag  SpritePick.vert  StaticSprite.frag  Terrain.frag  Terrain.tese  Terrain.vert  TerrainPicking.frag  TerrainPicking.vert  Text.frag  Text.vert  Water.frag  Water.tesc  Water.tese  (+1 more)
shaders/ocean/: Ifft.comp  InitialSpectrum.comp  Permute.comp  PrecompIfftData.comp  TimeDependentSpectrum.comp  WavesTexturesMerger.comp
src/: Aabb.h  Camera.h  Colors.h  Common.h  Cubemap.h  Cursor.cpp  Cursor.h  Details.h  GlWrappers.h  GlobalGlfwCallbackData.h  Paths.h  SetupWindow.cpp  SetupWindow.h  Shader.h  Sprite.h  Terrain.h  Texture.cpp  Texture.h  Ui.h  UiComponents.cpp  UiComponents.h  UiCore.cpp  UiCore.h  main.cpp
src/common/: ArbitraryGraph.cpp  ArbitraryGraph.h  Colors.h  Cubemap.h  Details.h  ErrorNotifier.h  FixedSizeQueue.h  GaussianNoise.h  GlobalGlfwCallbackData.h  Paths.h  PickingFramebuffer.h  Shader.cpp  Shader.h  ShadersBinding.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Vbos.h  VectorWithSize.h
src/core/: Interface.cpp  Interface.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Tile.cpp  Tile.h  TileRenderer.cpp  TileRenderer.h  Ui.cpp  Ui.h  Visibility.h  WireboundWorldCreator.cpp  WireboundWorldCreator.h
src/io/: Camera.cpp  Camera.h  Cursor.cpp  Cursor.h  README.md  Window.cpp  Window.h
src/modes/: AllModes.h  BiomesMode.h  FencesMode.cpp  FencesMode.h  IEditMode.h  ObjectsMode.h  PlacementMode.cpp  PlacementMode.h  README.md  RoadsMode.cpp  RoadsMode.h  SharedResources.cpp  SharedResources.h  TerrainMode.cpp  TerrainMode.h  TilesMode.h  WaterMode.cpp  WaterMode.h
src/renderers/: AllRenderers.h  FencesRenderer.h  ObjectsRenderer.h  PlacementRenderer.cpp  PlacementRenderer.h  README.md  RoadsRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h  WaterRenderer.cpp  WaterRenderer.h
src/vbo/: UiDataMain.h  (+2 more)
(+19 files in other folders)
